# cmsis-gd32f30x

./: CMakeLists.txt
GD32F30x_standard_peripheral/Include/: gd32f30x_libopt.h
